# sysx

./: .gitignore  LICENSE  README.md  pyproject.toml  snapcraft-sysx-73e7b56190139b7c35bfb70c02b0d1ca_amd64_2025-11-23T13:14:04.txt  snapcraft.yaml
src/sysx/: __init__.py  cli.py
src/sysx/modules/: cleaner.py  network_info.py  security_check.py  system_info.py
src/sysx/utils/: formatters.py  helpers.py
