[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysx"
version = "1.0.0"
description = "Terminal-based Linux system diagnostics and cleaning utility"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SysX Contributors"}
]
keywords = ["system", "monitoring", "linux", "terminal", "diagnostic", "cleaner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "psutil>=5.9.0",
]

[project.scripts]
sysx = "sysx.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/sysx"
Repository = "https://github.com/yourusername/sysx"
Issues = "https://github.com/yourusername/sysx/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
